tests/baselines/reference/unresolvedTypeAssertionSymbol.errors.txt
tests/cases/compiler/unresolvedTypeAssertionSymbol.ts(2,10): error TS2304: Cannot find name 'asdf'.


==== tests/cases/compiler/unresolvedTypeAssertionSymbol.ts (1 errors) ====
    var x = 1;
    var y = <asdf>x;
             ~~~~
!!! error TS2304: Cannot find name 'asdf'.
     
    